# paper_agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
configs/: config_test.yaml  configs_template.yaml
prompts/: pdf_extract_prompt.md  system.md
prompts/default/: _greetings.md  _summary.md  _sys_prompts_rag.md
src/: __init__.py  agent.py  cfg_mappings.py  client.py  cliui.py  controller.py  debug_utils.py  launcher.py  logger.py  paper_agent.py  paper_info.py  paper_rag.py  pdf_extractor.py  singleton.py
src/types/: agent_info.py  configs.py  paper_info.py
