[project]
name = "paper-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "openai>=1.86.0",
    "requests>=2.32.4",
    "tokenizer>=3.4.5",
    "torch>=2.7.1",
]
