[project]
name = "paper-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "faiss-cpu>=1.11.0",
    "hydra-core>=1.3.2",
    "markdown>=3.8.2",
    "marker-pdf>=1.7.5",
    "omegaconf>=2.3.0",
    "openai>=1.86.0",
    "pyfiglet>=1.0.3",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "sentence-transformers>=4.1.0",
    "tiktoken>=0.9.0",
    "tokenizer>=3.4.5",
    "torch>=2.7.1",
]
